[package]
name = "streams_decoder"
version = "0.1.0"
authors = ["AleBuser <4l3bu53r@gmail.com>"]
edition = "2018"

[lib]
name = "local"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.7"
anyhow = { version = "1.0", default-features = false }
iota-streams = { git = "https://github.com/iotaledger/streams"}
iota-core = { git = "https://github.com/iotaledger/iota.rs", rev = "0ad8e7f" }
handlebars = "3.1.0"
serde = {version="1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
serde_json = "1.0.53"
derive_more = "0.99.2"
reqwest = {version="0.10.4", features = ["json"] }
tokio-core = "0.1.17"
tokio = {version = "0.2.18", features = ["macros"]}
futures = "0.3.1"
chrono = { version = "0.4.10", features = ["serde"] }
actix-service = "1.0.1"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-cors = "0.2.0"
base64 = "^0.12"
rust-crypto = "0.2.36"
rand = "0.7.3"


